Updates python back to basics notebook

--- a/jupyter_notebooks/back_to_basics.ipynb
+++ b/jupyter_notebooks/back_to_basics.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['fizzbuzz', 22, 376, 92, 'buzz', 'fizz', 'fizz', 'fizz', 11, 'fizzbuzz']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Back to basics\n",
     "# Fizz buzz - replace all values divisible by three with fizz, all those divisible by five with buzz and fizzbuzz when it is divisible by both.\n",
@@ -34,21 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4, 36, 49, 1, 225, 144, 9, 4, 400]\n",
-      "[4, 36, 49, 1, 225, 144, 9, 4, 400]\n",
-      "[7, 1, 15, 3]\n",
-      "[7, 1, 15, 3]\n",
-      "[False, False, True, True, True, False, True, False, False]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List comprehension over map and filter. List comprehension is the preferred way to operate on a list and apply a uniform function to every member.\n",
     "# The idea here is that list comprehension is easier to read. I think this is debatable.\n",
@@ -58,7 +35,7 @@
     "new_list_zero = list(map(square, list_to_comprehend))\n",
     "print(new_list_zero)\n",
     "\n",
-    "# Preferred, apparentyl, is list comprehension:\n",
+    "# Preferred, apparently, is list comprehension:\n",
     "new_list_one = [square(x) for x in list_to_comprehend]\n",
     "print(new_list_one)\n",
     "\n",
@@ -81,20 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 2, 3, 4, 4, 6, 7, 9, 10, 200]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This method will also sort string types, but organizing them alphabetically. \n",
     "# There is also an option argument \"reverse\", which will return the sorted list in reverse.\n",
@@ -106,7 +72,186 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# It is also possible to sort more complex data structures by passing lambda function to the sorted method.\n",
+    "employees = [\n",
+    "    {'name': 'John Doe', 'department': 'Sales', 'salary': 130},\n",
+    "    {'name': 'John Smith', 'department': 'HR', 'salary': 96},\n",
+    "    {'name': 'Jane Doe', 'department': 'Engineering', 'salary': 200},\n",
+    "    {'name': 'Jane Smith', 'department': 'Engineering', 'salary': 150}\n",
+    "]\n",
+    "\n",
+    "employees_by_salary = sorted(employees, key=lambda employee: employee['salary'])\n",
+    "print(employees_by_salary)\n",
+    "\n",
+    "employees_by_department = sorted(employees, key=lambda employee: employee['department'])\n",
+    "print(employees_by_department)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# It is common in coding interviews to remove duplicate items in a dataset.\n",
+    "# In this case, we have a function that returns random words from an input string:\n",
+    "import random\n",
+    "LIST_OF_WORDS = 'the quick brown fox jumped over the lazy dog'.split()\n",
+    "NUM_WORDS = 1000\n",
+    "def get_random_word(words):\n",
+    "    return random.choice(words)\n",
+    "\n",
+    "# The aim: call get_random_word repeatedly to get 1000 unique random words and then return a data structure containing only the unique words.\n",
+    "# (the list of words is a proxy for all the words in english, the logic implemented should be the same).\n",
+    "\n",
+    "# First pass:\n",
+    "# This solution is suboptimal, because as the list of unique_words grows, so does the operation of traversing the list to check if this_word exists in the list.\n",
+    "def get_unique_words(num_words_to_generate, words):\n",
+    "    unique_words = []\n",
+    "    for i in range(0, num_words_to_generate):\n",
+    "        this_word = get_random_word(words)\n",
+    "        if this_word in unique_words:\n",
+    "            pass\n",
+    "        else:\n",
+    "            unique_words.append(this_word)\n",
+    "    return unique_words\n",
+    "\n",
+    "get_unique_words(NUM_WORDS, LIST_OF_WORDS)\n",
+    "\n",
+    "\n",
+    "# Second pass, using sets.\n",
+    "# The logic here looks very similar: get a random word, check if it's in the set, and if not; add it.\n",
+    "# This approach is different because sets store elements in a manner that allows near-constant-time checks unlike lists, which require linear-time lookups.\n",
+    "def optimized_get_unique_words(num_words_to_generate, words):\n",
+    "    unique_words = set()\n",
+    "    for _ in range (num_words_to_generate):\n",
+    "        unique_words.add(get_random_word(words))\n",
+    "    return unique_words\n",
+    "optimized_get_unique_words(NUM_WORDS, LIST_OF_WORDS)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving memory with generators\n",
+    "\n",
+    "# Consider the following: the interviewer asks the interviewee to find the sum of the first 1000 perfect squares, starting at 1.\n",
+    "# A naive first approach may be to use list comprehension:\n",
+    "sum_of_squares = sum([i * i for i in range(1, 1001)])\n",
+    "print(sum_of_squares)\n",
+    "\n",
+    "# Now consider that the interviewer asks the interviewee to run their solution against increasingly large numbers. Eventually, the code above will\n",
+    "# bog down. The solution is deceptively simple: replace the [] with (). This changes the logic from utilizing list comprehension to a generator expression.\n",
+    "better_sum_of_squares = sum((i * i for i in range(1, 1001)))\n",
+    "better_sum_of_squares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Working with dictionaries, it is often necessary to add, modify, remove or retrieve data.\n",
+    "sample_dictionary = {'type': 'dog', 'age': 2, 'color': 'tri-color'}\n",
+    "\n",
+    "# In order to check if a value is present in a given dictionary, a naive approach would be to use a conditional on the accessor and return \n",
+    "# a predetermined value if the desired one is not present:\n",
+    "if 'name' in sample_dictionary:\n",
+    "    name = sample_dictionary['name']\n",
+    "else:\n",
+    "    name = 'Indiana'\n",
+    "print(name)\n",
+    "\n",
+    "# This code works, but can be done in a one-liner using the .get() construct for dictionary objects.\n",
+    "# .get() performs the same action as the code above, just in a more abstract way. This is a convenience method.\n",
+    "name = sample_dictionary.get('name', 'Indiana')\n",
+    "name\n",
+    "\n",
+    "# But what if the interviewer asks that the dictionary be updated with the default value while stull accessing the same key?\n",
+    "# .get() doesn't work here. One could use something similar to the conditional logic above, but again, there is a convenience method for doing this:\n",
+    "name = sample_dictionary.setdefault('name', 'Indiana')\n",
+    "sample_dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Handling missing dictionary keys with collections.defaultdict()\n",
+    "# Consider the following: we have a group of students, and their respective grades on assignments.\n",
+    "# The input is a list of students, as tuples. The aim is to be able to look up all of the grades for a single student without iterating over the entire list.\n",
+    "student_grades = {}\n",
+    "students = [\n",
+    "    ('tim', 91),\n",
+    "    ('denton', 87),\n",
+    "    ('johnny', 90),\n",
+    "    ('james', 15),\n",
+    "    ('liz', 95),\n",
+    "    ('emily', 91),\n",
+    "    ('liz', 86),\n",
+    "    ('emily', 82),\n",
+    "    ('tim', 86),\n",
+    "    ('johnny', 86),\n",
+    "    ('james', 86),\n",
+    "]\n",
+    "\n",
+    "# Naive approach.\n",
+    "# Iterate over the students list. If the name is not already in the student_grades dictionary, add it there with an initially empty array.\n",
+    "# Then, append the grades for each name to their respective entries in the dictionary.\n",
+    "for name, grade in students:\n",
+    "    if name not in student_grades:\n",
+    "#       Name not found in dictionary. Init it with an empty array.\n",
+    "        student_grades[name] = []\n",
+    "#   append the grades for each name key in the dictionary.  \n",
+    "    student_grades[name].append(grade)\n",
+    "student_grades\n",
+    "\n",
+    "# Using defaultdict().\n",
+    "# Create a defaultdict() and pass it the list constructor with no arguments as a default factory method.\n",
+    "# This list is empty initially, so defaultdict calls list() if the name doesn't exist and then allows the grade to be appended.\n",
+    "from collections import defaultdict\n",
+    "new_student_grades = defaultdict(list)\n",
+    "for name, grade in students:\n",
+    "    new_student_grades[name].append(grade)\n",
+    "new_student_grades"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count hashable objects with collections.Counter\n",
+    "# The interviewer has given the interviewee a long string of words with no punctuation or capital letters.\n",
+    "# The assignment is to count the number of times that each word appears in the string.\n",
+    "from collections import Counter\n",
+    "\n",
+    "words_to_count = 'this is a string of words it is poorly constructed but i guess it does the trick since it is readable'.split()\n",
+    "count_of_words = Counter(words_to_count)\n",
+    "count_of_words\n",
+    "\n",
+    "# One can also use the most_common() method to get simple analytics on the fly:\n",
+    "count_of_words.most_common(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generating permutations and combinations with itertools\n",
+    "\n",
+    "# "
+   ]
   }
  ],
  "metadata": {
