--- a/jupyter_notebooks/numpy_lab.ipynb
+++ b/jupyter_notebooks/numpy_lab.ipynb
@@ -21,6 +21,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Form a three-dimensional array with 36 elements.\n",
+    "# This is also known as a rectangular prism.\n",
+    "# Higher-dimensional arrays are more difficult to visualize, but still follow the numpy \"arrays within an array\" pattern.\n",
+    "three_d_array = numpy.arange(36).reshape(3, 4, 3)\n",
+    "three_d_array, three_d_array.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vectorization - Express operations as ocurring on entire arrays rather than their individual elements.\n",
+    "\n",
+    "# Consider this 1-dimensional vector of True and False, from which we want to count the nuymber of \"False to True\" transitions in the sequence.\n",
+    "numpy.random.seed(444)\n",
+    "x = numpy.random.choice([False, True], size=100000)\n",
+    "\n",
+    "count = 0\n",
+    "for i, j in zip(x[:-1], x[1:]):\n",
+    "    if j and not i:\n",
+    "        count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In vectorized form, there's no explicit for-loop or direct reference to the individual elements.\n",
+    "numpy.count_nonzero(x[:-1] < x[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def generate_fib(num_fibs):\n",
     "    fib_members = []\n",
     "    current = 0\n",
@@ -323,9 +372,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -337,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
