adds linear regression model notebook

--- a/jupyter_notebooks/gibbs_sampling.ipynb
+++ b/jupyter_notebooks/gibbs_sampling.ipynb
@@ -61,7 +61,8 @@
     "def sample_tau(x, y, beta_0, beta_1, alpha, beta):\n",
     "    N = len(y)\n",
     "    \n",
-    "    # The tutorial we followed for deriving these formulae had this calculation wrong in code. The calculation of alpha_new was \"alpha + N / 2\". \n",
+    "    # The tutorial we followed for deriving these formulae had this calculation wrong in code. \n",
+    "    # The calculation of alpha_new was \"alpha + N / 2\". \n",
     "    # Looks like the author may have neglected the order of operations. \n",
     "    alpha_new = (alpha + N) / 2\n",
     "    residual = y - beta_0 - beta_1 * x\n",
@@ -194,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
