completes first linear regression notebook

--- a/jupyter_notebooks/linear_regression.ipynb
+++ b/jupyter_notebooks/linear_regression.ipynb
@@ -347,8 +347,56 @@
    "outputs": [],
    "source": [
     "# Advanced linear regression with statsmodels\n",
-    "import stats"
+    "import statsmodels.api as sm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_x = [[0, 1], [5, 1], [15, 2], [25, 5], [35, 11], [45, 15], [55, 34], [60, 35]]\n",
+    "stats_y = [4, 5, 20, 14, 32, 22, 38, 43]\n",
+    "stats_x, stats_y = numpy.array(stats_x), numpy.array(stats_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_x = sm.add_constant(stats_x)\n",
+    "stats_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This regression model is based on ordinary least squares (OLS)\n",
+    "ols_regression_model = sm.OLS(stats_y, stats_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = ols_regression_model.fit()\n",
+    "results.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
